<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="coming_soon">coming soon</string>
    <string name="search_hint">Search Artist</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_delete_searches">Delete search history</string>
    <string name="delete_recent_searches_question">Are you sure?</string>
    <string name="Delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_artist_found">No results. Check the Artist\'s name.</string>
    <string name="no_top_tracks_found">No Top tracks found on server</string>
    <string name="search_content_description">Search</string>
    <string name="error_passing_artist">Something went wrong. Try again!</string>
    <string name="no_response">No response from server. Try it Again.</string>
    <string name="no_response_zips">No response from server. Try another zip code in Settings</string>
    <string name="artist_name_imageview" translatable="false">artist_name_imageview</string>
    <string name="artist_name_textview" translatable="false">artist_name_textview</string>
    <string name="toolbar_toptracks_view" translatable="false">toolbar_toptracks_view</string>

    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to Cast</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="track_pic_imageview" translatable="false">track_name_imageview</string>
    <string name="song_name_textview" translatable="false">song_name_textview</string>
    <string name="album_name_textview" translatable="false">album_name_textview</string>
    <string name="song_no_available">Song not available</string>
    <string name="title_activity_music_service">MusicServiceActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="buffering">Buffering...</string>
    <string name="play_notification_button">Play</string>
    <string name="prev_notification_button">Prev</string>
    <string name="next_notification_button">Next</string>
    <string name="pause_notification_button">Pause</string>
    <string name="category_application">Application Settings</string>
    <string name="show_controls_in_lockscreen">Media controls are shown on lockscreen</string>
    <string name="hide_controls_in_lockscreen">Don\'t show media controls on lockscreen</string>
    <string name="controls_in_lockSscreen">Media Controls on Lockscreen</string>
    <string name="share_intent_chooser">share using</string>
    <string name="pref_zipCodeTitle">Select your country</string>
    <string name="pref_zipCodeDialogTitle">Choose your country</string>
    <string name="back_button">Back button</string>
    <string name="send_with">Send using...</string>
</resources>
