<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/appbar_layout">
    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:transitionName="@string/toolbar_toptracks_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >
            <RelativeLayout
                android:id="@+id/toolbar_back_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:layout_marginEnd="@dimen/margin_small">
                <ImageView
                    android:id="@+id/toolbar_back_arrow_on_back_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    android:contentDescription="@string/back_button"/>
                <ImageView
                    android:id="@+id/toolbar_artist_item_on_back_image"
                    android:layout_width="@dimen/picture_diameter"
                    android:layout_height="@dimen/picture_diameter"
                    android:paddingRight="@dimen/picture_margin"
                    android:paddingBottom="@dimen/picture_margin"
                    android:paddingLeft="@dimen/picture_margin"
                    android:paddingTop="@dimen/picture_margin"
                    android:layout_toEndOf="@id/toolbar_back_arrow_on_back_image"
                    android:layout_centerVertical="true"
                    android:transitionName="@string/artist_name_imageview"
                    android:contentDescription="@string/back_button"/>
            </RelativeLayout>
            <TextView android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_toEndOf="@id/toolbar_back_image"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

            <TextView android:id="@+id/toolbar_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/toolbar_back_image"
                android:layout_below="@id/toolbar_title"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:transitionName="@string/artist_name_textview"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.v4.widget.Space
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_under_toolbar"
        android:layout_centerInParent="true"/>
</android.support.design.widget.AppBarLayout>