<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_full_screen_player"
            android:transitionName="@string/toolbar_toptracks_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="#000"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/background_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image_str"
            android:transitionName="@string/track_pic_imageview"
            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fullscreen_bg_gradient" >

            <TextView
                android:id="@+id/line1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line2"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:shadowColor="@android:color/black"
                android:shadowRadius="20"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/fullscreen_line_color"
                android:transitionName="@string/song_name_textview"/>

            <TextView
                android:id="@+id/line2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/line3"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:shadowColor="@android:color/black"
                android:shadowRadius="20"
                android:textColor="@color/fullscreen_secondary_line_color"
                android:transitionName="@string/album_name_textview"/>

            <TextView
                android:id="@+id/line3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/controllers"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:shadowColor="@android:color/black"
                android:shadowRadius="20"
                android:textColor="@color/fullscreen_secondary_line_color"
                android:transitionName="@string/artist_name_textview"/>

            <LinearLayout
                android:id="@+id/controllers"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/startText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:textColor="@android:color/white" />

                    <SeekBar
                        android:id="@+id/seekBar1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_toStartOf="@+id/endText"
                        android:layout_toEndOf="@+id/startText" />

                    <TextView
                        android:id="@+id/endText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_alignParentEnd="true"
                        android:gravity="center_vertical"
                        android:layout_alignWithParentIfMissing="true"
                        android:maxLines="1"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <ImageView
                        android:id="@+id/prev"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_skip_previous_white_48dp"
                        android:contentDescription="@string/skip_prev"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onPrevClicked"/>

                    <ImageView
                        android:id="@+id/play_pause"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_play_arrow_white_48dp"
                        android:contentDescription="@string/play_pause"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onPlayPauseClicked"/>

                    <ImageView
                        android:id="@+id/next"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_skip_next_white_48dp"
                        android:contentDescription="@string/skip_next"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onNextClicked"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
